--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="loader-wrapper">
     <span class="loader"><span class="loader-inner"></span></span>
   </div>
-  <script src='src/bundle.js'></script>
+  <script src='src/dist/bundle.js'></script>
 
 </body>
 
