--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 </head>
 
 <body>
-  <h1>Phlex</h1>
-  <div style="position: relative;">
+  <div style="position: relative;" id="video_container">
     <video id="webcam" style="width: 1280px; height: 720px; position: abso" autoplay playsinline></video>
     <canvas class="output_canvas" id="output_canvas" width="1280" height="720" style="position: absolute; left: 0px; top: 0px;"></canvas>
   </div>
