--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
   <div style="position: relative;" id="video_container">
-    <video id="webcam" style="width: 10vw; height: 10vh; position: abso" autoplay playsinline></video>
+    <video id="webcam" style="width: 10vw; height: 10vh; position: absolute; opacity: 0;" autoplay playsinline></video>
     <canvas class="output_canvas" id="output_canvas" width="1280" height="720" style="position: absolute; left: 0px; top: 0px;"></canvas>
   </div>
   <div id="results">
