--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
 </head>
 
 <body>
-  <div style="position: relative;" id="video_container">
-    <video id="webcam" style="width: 10vw; height: 10vh; position: absolute; opacity: 0;" autoplay playsinline></video>
+  <div id="video_container">
+    <video id="webcam" autoplay></video>
     <canvas class="output_canvas" id="output_canvas" width="1280" height="720" style="position: absolute; left: 0px; top: 0px;"></canvas>
   </div>
   <div id="results">
     <div id="pose-info"></div>
     <div id="counter"></div>
     <div id="timer"><span id="countdown"></span></div>
-    <div id="timeSpent"></div>
   </div>
   <div class="loader-wrapper">
     <span class="loader"><span class="loader-inner"></span></span>
