--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
   <div id="video_container">
-    <video id="webcam" autoplay></video>
+    <video id="webcam" autoplay playsinline></video>
     <canvas class="output_canvas" id="output_canvas" width="1280" height="720" style="position: absolute; left: 0px; top: 0px;"></canvas>
   </div>
   <div id="results">
