Working drawn angles

--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
 </head>
 
 <body>
-  <div id="video_container">
-    <video id="webcam" autoplay playsinline></video>
-    <canvas class="output_canvas" id="output_canvas" width="1280" height="720" style="position: absolute; left: 0px; top: 0px;"></canvas>
-  </div>
+
+  <video id="webcam" autoplay playsinline></video>
   <div id="results">
     <div id="pose-info"></div>
     <div id="counter"></div>
     <div id="timer"><span id="countdown"></span></div>
   </div>
+  <canvas class="output_canvas" id="output_canvas" width="1280" height="720"></canvas>
   <div class="loader-wrapper">
     <span class="loader"><span class="loader-inner"></span></span>
   </div>
